@@ -1,0 +1,3 @@
+ALTER TABLE `iseq_product_metrics`
+MODIFY `mean_bait_coverage` FLOAT(8,2) UNSIGNED DEFAULT NULL;
+
